avoid Java 21 method